# test-homer

./: README.md  docker-compose.yaml  pyproject.toml  sqlc.yaml
docker/grafana/provisioning/datasources/: datasources.yml
docker/postgres/scripts/: init.sql
docker/prometheus/: alerts.yml  prometheus.yml
sql/queries/: query.sql
src/: internal_tools.py  main.py  prompt.py  sentiment_analyzer.py  teste.py  tools.py
src/db/: models.py  query.py
src/internal_tools/: __init__.py  atualizar_bairro.py  atualizar_com_suite.py  atualizar_data_e_hora_da_chamada.py  atualizar_meio_de_contato.py  atualizar_nome_do_lead.py  atualizar_orcamento.py  atualizar_posicao_do_sol.py  atualizar_quartos.py
src/nodes/: __init__.py  agent.py  conditional_node.py  node_constants.py  sentiment_analysis.py
src/project_types/: __init__.py  database_types.py  env_types.py  state_types.py  types.py
